...
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@drawable/edittext_stroke_selector"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamaProduk"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:textColor="@color/orange"
                    style="@style/RegularTextStyle"
                    android:textSize="@dimen/_13ssp"
                    android:inputType="text"
...
                app:boxStrokeColor="@drawable/edittext_stroke_selector"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:textColor="@color/orange"
                    style="@style/RegularTextStyle"
                    android:textSize="@dimen/_13ssp"
                    android:inputType="text"
...
                    app:boxStrokeColor="@drawable/edittext_stroke_selector"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp">

                    <com.cottacush.android.currencyedittext.CurrencyEditText
                        android:id="@+id/etModal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:textColor="@color/orange"
                        style="@style/RegularTextStyle"
                        android:textSize="@dimen/_13ssp"
                        app:localeTag="id-ID"
...
                    app:boxStrokeColor="@drawable/edittext_stroke_selector"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp">

                    <com.cottacush.android.currencyedittext.CurrencyEditText
                        android:id="@+id/etHargaJual"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:textColor="@color/orange"
                        style="@style/RegularTextStyle"
                        android:textSize="@dimen/_13ssp"
                        app:localeTag="id-ID"
...
                    app:boxStrokeColor="@drawable/edittext_stroke_selector"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSatuan"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:textColor="@color/orange"
                        style="@style/RegularTextStyle"
                        android:textSize="@dimen/_13ssp"
                        android:inputType="number"
...
                app:boxStrokeColor="@drawable/edittext_stroke_selector"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStokAwal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:textColor="@color/orange"
                    style="@style/RegularTextStyle"
                    android:textSize="@dimen/_13ssp"
                    android:inputType="number"
...
                    android:textSize="@dimen/_15ssp"
                    android:foregroundTint="@android:color/transparent"
                    app:rippleColor="@android:color/transparent"
                    style="@style/SemiboldTextStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSimpan"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:shadowColor="@android:color/transparent"
                    app:rippleColor="@android:color/transparent"
                    android:foregroundTint="@android:color/transparent"
                    android:layout_weight="1"
...
